--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 <body>
     <% if(message){ %>
         <script>
-            alert('<%=message %>')
+            alert("<%= message %>")
         </script>
     <% } %>
 
