--- a/views/main.ejs
+++ b/views/main.ejs
@@ -7,10 +7,61 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Main</title>
+
+    <style>
+        .name-card{
+            padding:20px;
+            border-radius:10px;
+            border: 1px solid #ccc;
+            box-shadow: 0 0 10px #ccc;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+
+        .name-card .name{
+            font-size: 20px;
+            font-weight: bold
+        }
+
+        .name-card .company{
+            margin-bottom: 50px;
+        }
+        .btn-container{
+            margin-bottom: 40px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <a class="btn btn-primary" href="/namecard/create">명함생성</a>
+
+
+        <% namecards.forEach(namecard=>{ %>
+            <div class="name-card">
+                <div class="name">
+                    <%= namecard.name %>
+                </div>
+                <div class="company">
+                    <%= namecard.company %> / <%= namecard.title %>
+                </div>
+                <div class="phone">
+                    <%= namecard.phone %>
+                </div>
+                <div class="email">
+                    <%= namecard.email %>
+                </div>
+                <div class="address">
+                    <%= namecard.address %>
+                </div>
+            </div>
+            <div class="btn-container">
+                <a class="btn btn-primary" href="/namecard/modify/<%= namecard.id %>">명함수정</a>
+                <a class="btn btn-danger" href="/api/namecard/delete/<%= namecard.id %>">명함삭제</a>    
+                <a class="btn btn-primary" href="/namecard/<%= namecard.id %>" target="_blank" >공유</a>
+            </div>
+
+        <% }) %>
+
     </div>
 
 
